@@ -1,0 +1,4 @@
+#include "Observer.h"
+
+Observer::~Observer() {}
+
