@@ -1,0 +1,10 @@
+#ifndef OBSERVER_H
+#define OBSERVER_H
+
+class Observer {
+    public: 
+        virtual void notify() = 0;
+        virtual ~Observer();
+};
+
+#endif
